# tair_trunk_r1797_annotation

tair/: Makefile.am  tair.IAB  tair.IAD  tair.IMB  tair.IMD  tair.PFI  tair.PO  tair.PR  tair.PRI  tair.PS  tair.WK3  tairmdb.IAB  tairmdb.IAD  tairmdb.IMB  tairmdb.IMD  tairmdb.PFI  tairmdb.PO  tairmdb.PR  tairmdb.PRI  tairmdb.PS  tairmdb.SearchResults  tairmdb.WK3
tair/.svn/: wc.db
tair/rpm/: tair-build.sh
tair/share/: dataserver.conf.default
tair/src/client/: Makefile.am  cluster_controller.cpp  cluster_controller.hpp  cluster_handler_manager.cpp  cluster_handler_manager.hpp  cluster_info_updater.cpp  cluster_info_updater.hpp  i_tair_client_impl.cpp  i_tair_client_impl.hpp  local_cache.h  tair_client.cpp  tair_client.hpp  tair_client_api.cpp  tair_client_api.hpp  tair_client_api_impl.cpp  tair_client_api_impl.hpp  tair_client_capi.cpp  tair_client_capi.hpp  tair_mc_client_api.cpp  tair_mc_client_api.hpp  tair_multi_cluster_client_impl.cpp  tair_multi_cluster_client_impl.hpp
tair/src/common/: Makefile.am  data_entry.cpp  data_entry.hpp  define.hpp  file_op.cpp  inval_stat.hpp  item_data_info.hpp  record_logger.hpp  record_logger_util.cpp  record_logger_util.hpp  stat_helper.cpp  stat_helper.hpp  stat_info.hpp  util.cpp  util.hpp  wait_object.hpp
tair/src/configserver/: conf_server_table_manager.cpp  conf_server_table_manager.hpp  group_info.cpp  group_info.hpp  server_conf_thread.cpp  server_conf_thread.hpp  server_info_allocator.cpp  stat_info.cpp  table_builder.cpp  table_builder.hpp  table_builder1.cpp  table_builder2.cpp  table_builder2.hpp  tair_cfg_svr.cpp  tair_cfg_svr.hpp
tair/src/dataserver/: dup_sync_manager.cpp  dup_sync_manager.hpp  duplicate_base.hpp  duplicate_manager.cpp  duplicate_manager.hpp  heartbeat_thread.cpp  heartbeat_thread.hpp  migrate_manager.cpp  migrate_manager.hpp  remote_sync_manager.cpp  remote_sync_manager.hpp  repair_rsync.cpp  request_processor.cpp  request_processor.hpp  table_manager.cpp  table_manager.hpp  tair_manager.cpp  tair_manager.hpp  tair_server.cpp  tair_server.hpp  update_log.cpp  update_log.hpp
tair/src/invalserver/: inval_group.cpp  inval_heartbeat_thread.cpp  inval_heartbeat_thread.hpp  inval_loader.hpp  inval_periodic_worker.cpp  inval_periodic_worker.hpp  inval_processor.hpp  inval_request_packet_wrapper.hpp  inval_request_storage.cpp  inval_retry_thread.cpp  inval_stat_helper.cpp
tair/src/packets/: Makefile.am  base_packet.hpp  dump_packet.hpp  get_group_packet.hpp  get_packet.hpp  get_server_table_packet.hpp  heartbeat_packet.hpp  mupdate_packet.hpp  packet_factory.cpp  packet_factory.hpp  prefix_gets_packet.hpp  prefix_hides_packet.hpp  prefix_puts_packet.hpp  put_packet.hpp  query_info_packet.hpp  remove_area_packet.hpp  response_mreturn_packet.hpp  response_return_packet.hpp  retry_all_packet.hpp  server_hash_table_packet.hpp
tair/src/plugin/: base_plugin.hpp  plugin_manager.cpp  remote_sync_manager.cpp
tair/src/statserver/storage/: flow_controller.cpp
tair/src/storage/: storage_manager.hpp
tair/src/storage/fdb/: data_file_reader.cpp  fdb_bucket.cpp  fdb_item.hpp  fdb_item_manager.cpp  fdb_manager.cpp  fdb_manager.hpp  file_op.cpp  mmap_file.hpp
tair/src/storage/ldb/: Makefile.am  ax_port_leveldb.m4  bg_task.cpp  bg_task.hpp  ldb_balancer.cpp  ldb_balancer.hpp  ldb_cache_stat.cpp  ldb_cache_stat.hpp  ldb_comparator.cpp  ldb_comparator.hpp  ldb_define.cpp  ldb_define.hpp  ldb_gc_factory.cpp  ldb_gc_factory.hpp  ldb_instance.cpp  ldb_instance.hpp  ldb_manager.cpp  ldb_manager.hpp  ldb_numeric_comparator.cpp  ldb_remote_sync_logger.cpp  ldb_remote_sync_logger.hpp  stat_manager.cpp
tair/src/storage/ldb/leveldb/db/: db_impl.cc  db_impl.h  db_iter.cc  log_writer.cc  memtable.cc  version_set.cc
tair/src/storage/ldb/leveldb/include/leveldb/: db.h  env.h  options.h
tair/src/storage/ldb/leveldb/util/: config.cc  config.h  posix_logger.h
tair/src/storage/ldb/snappy/: config.h.in  snappy.cc
tair/src/storage/ldb/tools/: Makefile.am  ldb_dump.cpp  ldb_hash_to_map.cpp  ldb_manifest_merger.cpp  ldb_rsync.cpp  ldb_sst_picker.cpp  ldb_util.cpp  ldb_util.hpp  view_cache_stat.cpp
tair/src/storage/mdb/: cache_hashmap.hpp  format.txt  mdb_area_test.cpp  mdb_define.cpp  mdb_define.hpp  mdb_factory.cpp  mdb_factory.hpp  mdb_manager.cpp  mdb_manager.hpp  mdb_slab_test.cpp  mdb_stat.hpp  mdb_test.cpp  mem_cache.cpp  mem_cache.hpp  mem_pool.cpp  mem_pool.hpp
tair/test/failover_test/: .classpath
tair/test/failover_test/diamond/: tair_fail.conf  tair_group_change.conf
tair/test/failover_test/src/test/java/com/taobao/invalidserver/: FailOverExtendTest.java  FailOverInvalidCommonTest.java  FailOverInvalidPerfixsTest.java
tair/test/failover_test/src/test/java/com/taobao/javaclient/: FailOverBaseCase.java  FailOverConfigServerTest2.java  FailOverDataServerTest2.java
tair/test/failover_test/src/test/java/com/taobao/kdbtest/: BaseTestCase.java  FailOverConfigServerTest2.java  FailOverDataServerTest1.java  FailOverDataServer_kdbTest1.java  FailoverClusterTest2.java  FunctionDataServerTest1.java
tair/test/failover_test/src/test/java/com/taobao/ldbFastDump/: FailOverBaseCase.java  fastdump.sh
tair/test/failover_test/src/test/java/com/taobao/ldbtest/: FailOverConfigServerTest3.java  FailoverClusterTest1.java  FailoverClusterTest2.java  FailoverClusterTest3.java  FunctionDataServerTest3.java
tair/test/failover_test/src/test/java/com/taobao/tairtest/: ConfParser.java  FailOverConfigServerDoubleRack2.java  FailOverConfigServerTest1.java  FailOverConfigServerTest2.java  FailOverDataServerDoubleRack2.java  FailOverDataServerTest1.java  FailOverDataServerTest3.java  FailoverClusterTest3.java  FunctionDataServerTest2.java
tair/test/interface_test/: CTAIRCLIENTAPI_17_x_mget_Test.cpp  Makefile.am
tair/test/statistics_test/: statistics_test.cpp
tair/test/tair_mc_client_api_test/: tair_mc_client_api_test.hpp  test_api.cpp
tblib/.svn/: wc.db
tblib/tbnet/src/: connection.cpp  connectionmanager.cpp  packetqueuethread.cpp  transport.cpp
tblib/tbsys/test/: testconfig.cpp  testnetutil.cpp  teststringutil.cpp
(+6 files in other folders)
